alteração na atividade 1

--- a/atividade 1/html/index.html
+++ b/atividade 1/html/index.html
@@ -1,36 +1,35 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../css/style.css" />
+    <title>Atividade 1</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
 </head>
 
 <body>
     <table>
         <tr>
-            <td>
+            <td align="left">
                 <img src="../assets/HalteresSeusHabitosTopo.png" alt="Halteres Seus Hábitos" />
-                <hr style="margin-left: 0px;" width="320px" />
+                <hr width="320px" />
             </td>
             <td>
-                <address>
+                <address align="right">
                     Estrada da Puxa Ferro, 12 <br>
                     Tel: (21) 91234-5678 <br>
                     <a href="mailto:contato@halterhabit.com.br">contato@halterhabit.com.br</a>
                 </address>
             </td>
         </tr>
-    </table>
-    <table>
         <tr>
-            <td class="menu">
-                <ul>
+            <td>
+                <ul type="square" class="menu">
                     <li><a href="./HalteresSeusHabitos.html" target="_blank">Apresentação</a></li>
                     <li><a href="./Planos.html" target="_blank">Planos</a></li>
                     <li><a href="./Equipamentos.html" target="_blank">Equipamentos</a></li>
                     <li><a href="./Inscricao.html" target="_blank">Inscrição</a></li>
                 </ul>
             </td>
-            <td style="text-align: center;">
+            <td align="center" class="principal">
                 <img src="../assets/HalteresSeusHabitosLogo.png" alt="Halteres Seus Hábitos Logo" />
                 <p class=".principal">faça exercícios e tenha mais saúde e disposição!</p>
             </td>
