--- a/atividade 1/html/index.html
+++ b/atividade 1/html/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-    <title>Atividade 1</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <title>Início</title>
 </head>
 
 <body>
