--- a/atividade 2/html/index.html
+++ b/atividade 2/html/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Karla">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Stoke">
+    <title>Início</title>
 </head>
 
 <body>
