altera titulo e adiciona class preco ao valor mensal

--- a/atividade 2/html/Planos.html
+++ b/atividade 2/html/Planos.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Karla">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Stoke">
-    <title>Início</title>
+    <title>Planos</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         </ul>
     </nav>
     <section class="apres">
-        <h1 class="titulo">Planos (valor mensal)</h1>
+        <h1 class="titulo">Planos (<span class="preco">valor mensal</span>)</h1>
         <div>
             <ul class="listaPlano">
                 <li>Academia:
