--- a/atividade 1/html/index.html
+++ b/atividade 1/html/index.html
@@ -1,40 +1,80 @@
 <html>
-
-<head>
+  <head>
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <title>Início</title>
-</head>
+    <style>
+      body {
+        background-color: #DDCC55;
+        color: #000000;
+      }
 
-<body>
+      .menu,
+      address {
+        font-family: "Verdana", "Ubuntu";
+      }
+
+      .principal {
+        font-family: "Lucida Bright", "Liberation";
+        text-align: center;
+      }
+
+      a:link,
+      a:visited {
+        color: #222222;
+      }
+
+      address {
+        text-align: right;
+      }
+
+    </style>
+  </head>
+
+  <body>
     <table>
-        <tr>
-            <td align="left">
-                <img src="../assets/HalteresSeusHabitosTopo.png" alt="Halteres Seus Hábitos" />
-                <hr width="320px" />
-            </td>
-            <td>
-                <address align="right">
-                    Estrada da Puxa Ferro, 12 <br>
-                    Tel: (21) 91234-5678 <br>
-                    <a href="mailto:contato@halterhabit.com.br">contato@halterhabit.com.br</a>
-                </address>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <ul type="square" class="menu">
-                    <li><a href="./HalteresSeusHabitos.html" target="_blank">Apresentação</a></li>
-                    <li><a href="./Planos.html" target="_blank">Planos</a></li>
-                    <li><a href="./Equipamentos.html" target="_blank">Equipamentos</a></li>
-                    <li><a href="./Inscricao.html" target="_blank">Inscrição</a></li>
-                </ul>
-            </td>
-            <td align="center" class="principal">
-                <img src="../assets/HalteresSeusHabitosLogo.png" alt="Halteres Seus Hábitos Logo" />
-                <p class=".principal">faça exercícios e tenha mais saúde e disposição!</p>
-            </td>
-        </tr>
+      <tr>
+        <td>
+          <img
+            src="../assets/HalteresSeusHabitosTopo.png"
+            alt="Halteres Seus Hábitos"
+          />
+          <hr width="320px" />
+        </td>
+        <td>
+          <address>
+            Estrada da Puxa Ferro, 12 <br />
+            Tel: (21) 91234-5678 <br />
+            <a href="mailto:contato@halterhabit.com.br"
+              >contato@halterhabit.com.br</a
+            >
+          </address>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <ul type="square" class="menu">
+            <li>
+              <a href="./HalteresSeusHabitos.html" target="_blank"
+                >Apresentação</a
+              >
+            </li>
+            <li><a href="./Planos.html" target="_blank">Planos</a></li>
+            <li>
+              <a href="./Equipamentos.html" target="_blank">Equipamentos</a>
+            </li>
+            <li><a href="./Inscricao.html" target="_blank">Inscrição</a></li>
+          </ul>
+        </td>
+        <td class="principal">
+          <img
+            src="../assets/HalteresSeusHabitosLogo.png"
+            alt="Halteres Seus Hábitos Logo"
+          />
+          <p>
+            faça exercícios e tenha mais saúde e disposição!
+          </p>
+        </td>
+      </tr>
     </table>
-</body>
-
+  </body>
 </html>
