--- a/atividade 1/html/index.html
+++ b/atividade 1/html/index.html
@@ -42,7 +42,7 @@
         </td>
         <td>
           <address>
-            Estrada da Puxa Ferro, 12 <br />
+            Estrada do Puxa Ferro, 12 <br />
             Tel: (21) 91234-5678 <br />
             <a href="mailto:contato@halterhabit.com.br"
               >contato@halterhabit.com.br</a
