--- a/atividade 2,3,4,5/html/index.html
+++ b/atividade 2,3,4,5/html/index.html
@@ -11,7 +11,7 @@
     <header>
         <img class="imgLogo" src="../assets/HalteresSeusHabitosTopo.png" alt="Halteres Seus Hábitos" />
         <address class="ender">
-            Estrada da Puxa Ferro, 12 <br>
+            Estrada do Puxa Ferro, 12 <br>
             Tel: (21) 91234-5678 <br>
             <a href="mailto:contato@halterhabit.com.br">contato@halterhabit.com.br</a>
         </address>
@@ -26,7 +26,7 @@
     </nav>
     <section class="apres">
         <img src="../assets/HalteresSeusHabitosLogo.png" alt="Halteres Seus Hábitos Logo" />
-        <p class=".principal">faça exercícios e tenha mais saúde e disposição!</p>
+        <p class="principal">faça exercícios e tenha mais saúde e disposição!</p>
     </section>
 </body>
 
