--- a/atividade 2,3,4,5/html/index.html
+++ b/atividade 2,3,4,5/html/index.html
@@ -26,7 +26,7 @@
     </nav>
     <section class="apres">
         <img src="../assets/HalteresSeusHabitosLogo.png" alt="Halteres Seus Hábitos Logo" />
-        <p class="principal">faça exercícios e tenha mais saúde e disposição!</p>
+        <p>faça exercícios e tenha mais saúde e disposição!</p>
     </section>
 </body>
 
