--- a/atividade 2,3,4,5/html/index.html
+++ b/atividade 2,3,4,5/html/index.html
@@ -1,33 +1,48 @@
 <html>
-
-<head>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Karla">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Stoke">
+  <head>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Karla"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Stoke"
+    />
     <title>Início</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <img class="imgLogo" src="../assets/HalteresSeusHabitosTopo.png" alt="Halteres Seus Hábitos" />
-        <address class="ender">
-            Estrada do Puxa Ferro, 12 <br>
-            Tel: (21) 91234-5678 <br>
-            <a href="mailto:contato@halterhabit.com.br">contato@halterhabit.com.br</a>
-        </address>
+      <img
+        class="imgLogo"
+        src="../assets/HalteresSeusHabitosTopo.png"
+        alt="Halteres Seus Hábitos"
+      />
+      <address class="ender">
+        Estrada do Puxa Ferro, 12 <br />
+        Tel: (21) 91234-5678 <br />
+        <a href="mailto:contato@halterhabit.com.br"
+          >contato@halterhabit.com.br</a
+        >
+      </address>
     </header>
     <nav>
-        <ul>
-            <li><a href="./HalteresSeusHabitos.html" target="_blank">Apresentação</a></li>
-            <li><a href="./Planos.html" target="_blank">Planos</a></li>
-            <li><a href="./Equipamentos.html" target="_blank">Equipamentos</a></li>
-            <li><a href="./Inscricao.html" target="_blank">Inscrição</a></li>
-        </ul>
+      <ul>
+        <li>
+          <a href="./HalteresSeusHabitos.html" target="_blank">Apresentação</a>
+        </li>
+        <li><a href="./Planos.html" target="_blank">Planos</a></li>
+        <li><a href="./Equipamentos.html" target="_blank">Equipamentos</a></li>
+        <li><a href="./Inscricao.html" target="_blank">Inscrição</a></li>
+      </ul>
     </nav>
     <section class="apres">
-        <img src="../assets/HalteresSeusHabitosLogo.png" alt="Halteres Seus Hábitos Logo" />
-        <p>faça exercícios e tenha mais saúde e disposição!</p>
+      <img
+        src="../assets/HalteresSeusHabitosLogo.png"
+        alt="Halteres Seus Hábitos Logo"
+      />
+      <p>faça exercícios e tenha mais saúde e disposição!</p>
     </section>
-</body>
-
+  </body>
 </html>
