--- a/atividade 2,3,4,5/html/Inscricao.html
+++ b/atividade 2,3,4,5/html/Inscricao.html
@@ -20,7 +20,7 @@
         alt="Halteres Seus Hábitos"
       />
       <address class="ender">
-        Estrada da Puxa Ferro, 12 <br />
+        Estrada do Puxa Ferro, 12 <br />
         Tel: (21) 91234-5678 <br />
         <a href="mailto:contato@halterhabit.com.br"
           >contato@halterhabit.com.br</a
@@ -38,91 +38,138 @@
       </ul>
     </nav>
     <section class="apres">
-      <h1 class="titulo">Inscrição</h1>
-      <form action="" method="post" class="formul">
+      <h3 class="titulo">Inscrição</h3>
+      <form class="formul">
         <fieldset class="fsPessoal">
-          <div class="ColEsqPes">
-            <legend>Dados Pessoais</legend>
-            <div class="linhaNome">
-              <label for="nome">Nome:</label>
-              <input type="text" class="inpNome" name="nome" id="nome" />
-            </div>
-            <div class="linhaDados">
-
-                <label for="telefone">Telefone:</label>
-                <input type="text" class="inpTelef" name="telefone" id="telefone" />
-                <label for="celular">Celular:</label>
-                <input type="text" class="inpTelef" name="celular" id="celular" />
-                <label for="idade">Idade:</label>
-                <input type="number" name="idade" id="idade" min="16" max="100" />
-            </div>
+          <legend>Dados Pessoais</legend>
+          <div class="linhaNome">
+            <label for="nome">Nome:</label>
+            <input type="text" class="inpNome" name="nome" id="nome" />
           </div>
-          <fieldset class="fsGenero">
-            <legend>Gênero</legend>
-            <input type="radio" name="masculino" id="masculino" />
-            <label for="masculino">Masculino</label>
-            <input type="radio" name="feminino" id="feminino" />
-            <label for="feminino">Feminino</label>
-            <input type="radio" name="outros" id="outros" />
-            <label for="outros">Outros</label>
-          </fieldset>
-        </fieldset>
-        <fieldset>
-          <legend>Matrícula</legend>
-          <label for="matriculado">Matriculado?</label>
-          <input type="checkbox" name="matriculado" id="matriculado" />
-          <label for="numero">Número:</label>
-          <input type="text" class="inpMat" name="numero" id="numero" />
-          <label for="atividade">Atividade:</label>
-          <select name="atividade" id="atividade">
-            <option value="academia">Academia</option>
-            <option value="natacao">Natação</option>
-            <option value="combo">Combo</option>
-          </select>
-          <label for="plano">Plano:</label>
-          <select name="plano" id="plano">
-            <option value="anual">Anual</option>
-            <option value="semestral">Semestral</option>
-            <option value="mensal">Mensal</option>
-          </select>
-          <fieldset class="fsCartao">
-            <legend>Cartão</legend>
-            <label for="numero">Bandeira:</label>
-            <input type="radio" name="visa" id="visa" />
-            <label for="visa">Visa</label>
-            <input type="radio" name="master" id="master" />
-            <label for="master">Master</label>
-            <input type="radio" name="elo" id="elo" />
-            <label for="elo">Elo</label>
-            <label for="validade">Validade:</label>
+          <div class="linhaDados">
+            <label for="telefone">Telefone:</label>
+            <input type="text" class="inpTelef" name="telefone" id="telefone" />
+
+            <label for="celular">Celular:</label>
+            <input type="text" class="inpTelef" name="celular" id="celular" />
+
+            <label for="idade">Idade:</label>
             <input
               type="number"
               class="numDD"
-              name="mes"
-              id="mes"
-              min="1"
-              max="31"
-              size="2"
+              name="idade"
+              id="idade"
+              min="18"
+              max="100"
             />
-            /
-            <input
-              type="number"
-              class="numQD"
-              name="ano"
-              id="ano"
-              min="2024"
-              max="2050"
-              size="4"
-            />
-            <label for="numero">Número:</label>
-            <input type="text" class="inpNCC" name="numero" id="numero" />
-          </fieldset>
-          <input type="button" value="Matrícula+Plano" />
-          <label for="numero">Valor: R$</label>
-          <input type="text" class="inpVal" name="numero" id="numero" />
+
+            <fieldset class="fsGenero">
+              <legend>Gênero</legend>
+              <input
+                type="radio"
+                name="masculino."
+                id="masculino"
+                value="Masculino"
+              />
+              <label for="masculino">Masculino</label><br />
+              <input
+                type="radio"
+                name="feminino."
+                id="feminino"
+                value="Feminino"
+              />
+              <label for="feminino">Feminino</label><br />
+              <input type="radio" name="outros." id="outros" value="Outros" />
+              <label for="outros">Outros</label>
+            </fieldset>
+          </div>
         </fieldset>
-        <input type="submit" class="entDireita" value="Enviar" />
-        <input type="button" class="entDireita" value="Limpar" />
+        <fieldset class="fsPessoal">
+          <legend>Matrícula</legend>
+          <div class="linhaNome">
+            <label for="matriculado">Matriculado?</label>
+            <input type="checkbox" name="matriculado" id="matriculado" />
+            <div class="ColDirMat">
+              <label for="numeroInsc">Número:</label>
+              <input
+                type="text"
+                class="inpMat"
+                name="numeroInsc"
+                id="numeroInsc"
+              />
+            </div>
+          </div>
+          <div class="linhaNome">
+            <label for="atividade">Atividade:</label>
+            <select name="atividade" id="atividade">
+              <option value="academia">Academia</option>
+              <option value="natacao">Natação</option>
+              <option value="combo">Combo</option>
+            </select>
+            <div class="ColDirMat">
+              <label for="plano">Plano:</label>
+              <select name="plano" id="plano">
+                <option value="anual">Anual</option>
+                <option value="semestral">Semestral</option>
+                <option value="mensal">Mensal</option>
+              </select>
+            </div>
+          </div>
+          <fieldset class="fsCartao">
+            <legend>Cartão</legend>
+            <div class="ColLabCrd">
+              <label for="bandeira">Bandeira:</label>
+              <input type="radio" name="visa" id="visa" />
+              <label for="visa">Visa</label>
+              <input type="radio" name="master" id="master" />
+              <label for="master">Master</label>
+              <input type="radio" name="elo" id="elo" />
+              <label for="elo">Elo</label>
+            </div>
+            <div class="ColLabCrd">
+              <label for="validade">Validade:</label>
+              <input
+                type="number"
+                class="numDD"
+                name="mes"
+                id="mes"
+                min="1"
+                max="12"
+                size="2"
+              />
+              /
+              <input
+                type="number"
+                class="numQD"
+                name="ano"
+                id="ano"
+                min="2024"
+                max="2050"
+                size="4"
+              />
+            </div>
+            <div class="ColLabCrd">
+              <label for="numeroCartao">Número:</label>
+              <input
+                type="text"
+                class="inpNCC"
+                name="numeroCartao"
+                id="numeroCartao"
+              />
+            </div>
+          </fieldset>
+          <div class="linhaNome">
+            <div class="ColValTot">
+              <input type="button" value="Matrícula+Plano" />
+            </div>
+            <label for="valor">Valor: R$</label>
+            <input type="text" class="inpVal" name="valor" id="valor" />
+          </div>
+        </fieldset>
+        <div class="entDireita">
+          <input type="submit" class="entDirei.ta" value="Enviar" />
+          <input type="button" class="entDirei.ta" value="Limpar" />
+        </div>
       </form>
     </section>
   </body>
