--- a/atividade 1/html/index.html
+++ b/atividade 1/html/index.html
@@ -2,57 +2,31 @@
   <head>
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <title>Início</title>
-    <style>
-      body {
-        background-color: #DDCC55;
-        color: #000000;
-      }
-
-      .menu,
-      address {
-        font-family: "Verdana", "Ubuntu";
-      }
-
-      .principal {
-        font-family: "Lucida Bright", "Liberation";
-        text-align: center;
-      }
-
-      a:link,
-      a:visited {
-        color: #222222;
-      }
-
-      address {
-        text-align: right;
-      }
-
-    </style>
   </head>
 
-  <body>
-    <table>
+  <body bgcolor="#DDCC55" text="#000000" link="#222222" vlink="#222222">
+    <table width="100%">
       <tr>
         <td>
           <img
             src="../assets/HalteresSeusHabitosTopo.png"
             alt="Halteres Seus Hábitos"
           />
-          <hr width="320px" />
+          <hr width="320px" align="left" />
         </td>
         <td>
-          <address>
-            Estrada do Puxa Ferro, 12 <br />
-            Tel: (21) 91234-5678 <br />
-            <a href="mailto:contato@halterhabit.com.br"
-              >contato@halterhabit.com.br</a
-            >
-          </address>
+            <address style="font-family: 'Verdana', 'Ubuntu'" align="right">
+              Estrada do Puxa Ferro, 12 <br />
+              Tel: (21) 91234-5678 <br />
+              <a href="mailto:contato@halterhabit.com.br"
+                >contato@halterhabit.com.br</a
+              >
+            </address>
         </td>
       </tr>
       <tr>
         <td>
-          <ul type="square" class="menu">
+          <ul type="square" style="font-family: 'Verdana', 'Ubuntu'">
             <li>
               <a href="./HalteresSeusHabitos.html" target="_blank"
                 >Apresentação</a
@@ -65,14 +39,12 @@
             <li><a href="./Inscricao.html" target="_blank">Inscrição</a></li>
           </ul>
         </td>
-        <td class="principal">
+        <td style="font-family: 'Lucida Bright', 'Liberation'" align="center">
           <img
             src="../assets/HalteresSeusHabitosLogo.png"
             alt="Halteres Seus Hábitos Logo"
           />
-          <p>
-            faça exercícios e tenha mais saúde e disposição!
-          </p>
+          <p>faça exercícios e tenha mais saúde e disposição!</p>
         </td>
       </tr>
     </table>
