--- a/atividade 2,3,4,5/html/Inscricao.html
+++ b/atividade 2,3,4,5/html/Inscricao.html
@@ -39,93 +39,145 @@
     </nav>
     <section class="apres">
       <h3>Inscrição</h3>
-      <form>
-        <fieldset>
+      <form class="formul">
+        <fieldset class="fsPessoal">
           <legend>Dados Pessoais</legend>
-          <label for="nome">Nome:</label>
-          <input type="text" name="nome" id="nome" />
-          <label for="telefone">Telefone:</label>
-          <input type="text" name="telefone" id="telefone" />
-          <label for="celular">Celular:</label>
-          <input type="text" name="celular" id="celular" />
-          <label for="idade">Idade:</label>
-          <input type="number" name="idade" id="idade" min="18" max="100" />
-          <fieldset>
-            <legend>Gênero</legend>
-            <input
-              type="radio"
-              name="masculino."
-              id="masculino"
-              value="Masculino"
-            />
-            <label for="masculino">Masculino</label><br />
-            <input
-              type="radio"
-              name="feminino."
-              id="feminino"
-              value="Feminino"
-            />
-            <label for="feminino">Feminino</label><br />
-            <input type="radio" name="outros." id="outros" value="Outros" />
-            <label for="outros">Outros</label>
-          </fieldset>
+          <div class="linhaNome">
+            <label class="ColEsqPes">Nome:</label>
+            <input type="text" class="inpNome" name="nome" id="nome" />
+          </div>
+          <div class="linhaDados">
+            <div class="BlocoEsq">
+              <div class="linhaPessoal">
+                <label for="telefone" class="ColEsqPes">Telefone:</label>
+                <input
+                  type="text"
+                  class="inpTelef"
+                  name="telefone"
+                  id="telefone"
+                />
+              </div>
+              <div class="linhaPessoal">
+                <label for="celular" class="ColEsqPes">Celular:</label>
+                <input
+                  type="text"
+                  class="inpTelef"
+                  name="celular"
+                  id="celular"
+                />
+              </div>
+              <div class="linhaPessoal">
+                <label for="idade" class="ColEsqPes">Idade:</label>
+                <input
+                  type="number"
+                  class="numDD"
+                  name="idade"
+                  id="idade"
+                  min="18"
+                  max="100"
+                  value="18"
+                />
+              </div>
+            </div>
+
+            <fieldset class="fsGenero">
+              <legend>Gênero</legend>
+              <label
+                ><input type="radio" name="masculino" checked />Masculino</label
+              ><br />
+              <label><input type="radio" name="feminino" />Feminino</label
+              ><br />
+              <label><input type="radio" name="outros" />Outros</label>
+            </fieldset>
+          </div>
         </fieldset>
-        <fieldset>
+        <fieldset class="fsPessoal">
           <legend>Matrícula</legend>
-          <label for="matriculado">Matriculado?</label>
-          <input type="checkbox" name="matriculado" id="matriculado" />
-          <br />
-          <label for="plano">Plano:</label>
-          <select name="plano" id="plano">
-            <option value="anual">Anual</option>
-            <option value="semestral">Semestral</option>
-            <option value="mensal">Mensal</option>
-          </select>
-          <label for="numeroInsc">Número:</label>
-          <input type="text" name="numeroInsc" id="numeroInsc" />
-          <br />
-          <label for="atividade">Atividade:</label>
-          <select name="atividade" id="atividade">
-            <option value="academia">Academia</option>
-            <option value="natacao">Natação</option>
-            <option value="combo">Combo</option>
-          </select>
-          <fieldset>
+          <div class="linhaNome">
+            <label for="matriculado">Matriculado?</label>
+            <input type="checkbox" name="matriculado" id="matriculado" />
+            <div class="ColDirMat">
+              <label for="numeroInsc">Número:</label>
+              <input
+                type="text"
+                class="inpMat"
+                name="numeroInsc"
+                id="numeroInsc"
+              />
+            </div>
+          </div>
+          <div class="linhaNome">
+            <label for="atividade">Atividade:</label>
+            <select name="atividade" id="atividade">
+              <option>------</option>
+              <option value="academia">Academia</option>
+              <option value="natacao">Natação</option>
+              <option value="combo">Combo</option>
+            </select>
+            <div class="ColDirMat">
+              <label for="plano">Plano:</label>
+              <select name="plano" id="plano">
+                <option>------</option>
+                <option value="anual">Anual</option>
+                <option value="semestral">Semestral</option>
+                <option value="mensal">Mensal</option>
+              </select>
+            </div>
+          </div>
+          <fieldset class="fsCartao">
             <legend>Cartão</legend>
-            <label for="bandeira">Bandeira:</label>
-            <input type="radio" name="visa" id="visa" />
-            <label for="visa">Visa</label>
-            <input type="radio" name="master" id="master" />
-            <label for="master">Master</label>
-            <input type="radio" name="elo" id="elo" />
-            <label for="elo">Elo</label>
-            <label for="validade">Validade:</label>
-            <input
-              type="number"
-              name="mes"
-              id="mes"
-              min="1"
-              max="12"
-              size="2"
-            />
-            /
-            <input
-              type="number"
-              name="ano"
-              id="ano"
-              min="2024"
-              max="2050"
-              size="4"
-            />
-            <label for="numeroCartao">Número:</label>
-            <input type="text" name="numeroCartao" id="numeroCartao" />
+            <label for="bandeira" class="ColLabCrd"
+              >Bandeira:
+              <label><input type="radio" name="RadBand" checked />Visa</label>
+              <label><input type="radio" name="RadBand" />Master</label>
+              <label><input type="radio" name="RadBand" />Elo</label>
+            </label>
+            <label for="validade" class="ColLabCrd"
+              >Validade:
+              <input
+                type="number"
+                class="numDD"
+                name="mes"
+                id="mes"
+                min="1"
+                max="12"
+                value="8" />
+              /
+              <input
+                type="number"
+                class="numQD"
+                name="ano"
+                id="ano"
+                min="2024"
+                max="2050"
+                value="2024"
+            /></label>
+            <br />
+            <label for="numeroCartao" class="ColLabCrd"
+              >Número:
+              <input
+                type="text"
+                class="inpNCC"
+                name="numeroCartao"
+                id="numeroCartao"
+            /></label>
           </fieldset>
-          <input type="button" value="Matrícula+Plano" />
-          <label for="valor">Valor: R$</label>
-          <input type="text" name="valor" id="valor" />
+          <div class="linhaNome">
+            <div class="ColValTot">
+              <input type="button" value="Matrícula+Plano" />
+            </div>
+            <label for="valor"
+              >Valor: R$
+              <input type="text" class="inpVal" name="valor" id="valor"
+            /></label>
+          </div>
         </fieldset>
-        <input type="submit" value="Enviar" />
-        <input type="button" value="Limpar" />
+        <fieldset style="border: none">
+          <div class="entDireita">
+            <input type="submit" value="Enviar" />
+            <input type="button" value="Limpar" />
+          </div>
+        </fieldset>
       </form>
     </section>
   </body>
